--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,11 @@
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
+            <artifactId>Authenticator</artifactId>
+            <version>0</version>
+        </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
             <artifactId>System32</artifactId>
             <version>${project.version}</version>
         </dependency>
